<resources>
    <string name="app_name">SOAR</string>
    <string name="sample">샘플 텍스트</string>
    <string name="sample_long">
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
        샘플 텍스트 \n
    </string>
    <string name="sample_long2">샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트샘플 텍스트</string>
    <string name="num">000</string>
    <string name="date">00.00.00 ~ 00.00.00</string>
    <string name="date2">0000.00.00</string>
    <string name="date3">00일 월요일</string>
    <string name="toast_add_review" translatable="true">댓글이 등록되었습니다.</string>
    <string name="toast_delete_review" translatable="true">댓글이 삭제되었습니다.</string>
    <string name="toast_edit_review" translatable="true">댓글이 수정되었습니다.</string>
    <string name="toast_review_error" translatable="true">내용을 입력해주세요.</string>
    <string name="toast_biz_apply">해당 지원 사업이 신청 완료 되었어요!</string>
    <string name="cancel">취소</string>
    <string name="alarm_title">알림함</string>
    <string name="no_alarm1">받은 알림이 없습니다</string>
    <string name="no_alarm2">알림을 설정하여 다양한 정보를 받아보세요</string>
    <string name="alarm_7days">최근 7일간 알림까지 확인할 수 있어요</string>
    <string name="dropdown1">전체</string>
    <string name="dropdown2">일정 리마인드</string>
    <string name="dropdown3">리뷰</string>
    <string name="dropdown4">신청 확인</string>
    <string name="dropdown5">큐레이션</string>
    <string name="dropdown6">기능</string>
    <string name="alarm_setting">알림 설정</string>
    <string name="confirm">확인</string>
    <string name="alarm_setting_title1">일정 리마인드 설정</string>
    <string name="alarm_setting_detail1">신청 시작 알림</string>
    <string name="alarm_setting_detail2">결과발표 알림</string>
    <string name="alarm_setting_detail3">신청 마감 당일 알림</string>
    <string name="alarm_setting_title2">리뷰</string>
    <string name="alarm_setting_detail4">리뷰 및 피드백 요청 알림</string>
    <string name="alarm_setting_title3">신청 확인</string>
    <string name="alarm_setting_detail5">신청 여부 확인 알림</string>
    <string name="alarm_setting_detail6">신청 완료 확인 알림</string>
    <string name="alarm_setting_detail7">사용자 맞춤 알림</string>
    <string name="alarm_setting_title4">큐레이션</string>
    <string name="alarm_setting_detail8">정책 특별 알림</string>
    <string name="alarm_setting_detail9">정책 데이터 업데이트 알림</string>
    <string name="alarm_setting_detail10">앱 활성화 알림</string>
    <string name="alarm_setting_detail11">중요 공지 알림</string>
    <string name="alarm_setting_title5">기능관련</string>
    <string name="alarm_setting_detail12">알림 설정 추천</string>
    <string name="home">홈</string>
    <string name="explore">둘러보기</string>
    <string name="archiving">아카이빙</string>
    <string name="calendar">캘린더</string>
    <string name="mypage">마이페이지</string>
    <string name="sir">님</string>
    <string name="dead_line">마감일:</string>
    <string name="recently_viewed">최근 본 지원 사업</string>
    <string name="closing_soon">마감 임박 지원 사업</string>
    <string name="age_popular"> 인기 지원 사업</string>
    <string name="home_login1">와 함께</string>
    <string name="home_login2">적합한 지원 사업을 찾아볼까요?</string>
    <string name="to_login">로그인하기</string>
    <string name="home_swipe">2025년 청년정책이 새로워졌어요</string>
    <string name="home_swipe_link">지금 확인하기</string>
    <string name="home_popular_biz">실시간 인기 지원 사업</string>
    <string name="home_category">어떤 지원 사업을 찾고 있나요?</string>
    <string name="home_category1_title">일하는 꿈을 가진\n청년을 위한</string>
    <string name="home_category2_title">나만의 공간을 찾는\n청년을 위한</string>
    <string name="home_category3_title">돌봄과 쉼이 필요한\n청년을 위한</string>
    <string name="home_category4_title">배움을 멈추지 않는\n청년을 위한</string>
    <string name="home_ad1_label">창업에 성공하고 싶다</string>
    <string name="home_ad1_title">K-스타트업 포털에서 \n창업 정보를 받아보세요</string>
    <string name="home_ad2_label">해외 취업을 꿈꾸고 있다면?</string>
    <string name="home_ad2_title">월드잡플러스에서\n해외 취업 정보를 받아보세요</string>
    <string name="home_ad3_label">청년의 꿈을 응원하는 청년 DB</string>
    <string name="home_ad3_title">청년DB에서\n정책 담당자를 만나보세요</string>
    <string name="biz_category">지원 사업 카테고리</string>
    <string name="popular_biz">인기 지원 사업</string>
    <string name="keyword_select">키워드로 지원 사업 모아보기</string>
    <string name="personal_biz">나에게 맞는 공고 </string>
    <string name="personal_biz_title">님의 정보와 맞는 공고</string>
    <string name="search_message">관심있는 지원 사업을 검색해보세요</string>
    <string name="recent_search">최근 검색어</string>
    <string name="delete_search">기록 삭제</string>
    <string name="always">상시</string>
    <string name="biz_deadline">사업 마감일</string>
    <string name="apply_deadline">신청 마감일</string>
    <string name="biz_end">사업 종료</string>
    <string name="edit2">편집</string>
    <string name="archiving_label1">신청 완료한 지원 사업</string>
    <string name="select_keyword">키워드 선택</string>
    <string name="keyword">키워드</string>
    <string name="keyword_job">일자리</string>
    <string name="job_all">일자리 전체</string>
    <string name="keyword_dwelling">주거</string>
    <string name="dwelling_all">주거 전체</string>
    <string name="keyword_education">교육</string>
    <string name="education_all">교육 전체</string>
    <string name="keyword_welfare">복지문화</string>
    <string name="welfare_all">복지문화 전체</string>
    <string name="re_select">재설정</string>
    <string name="submit_keyword">필터 검색 결과 보기</string>
    <string name="edit_title">전체 > 북마크한 정책</string>
    <string name="select_all">전체 선택</string>
    <string name="deselect_all">전체 해제</string>
    <string name="apply_complete">신청 완료</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="calendar_label">모든 일정은 마감일 기준으로 저장돼요</string>
    <string name="detailPage_title" translatable="true">지원 사업 정보</string>
    <string name="deadline" translatable="true">마감</string>
    <string name="dday" translatable="true">D-</string>
    <string name="support_target" translatable="true">지원대상</string>
    <string name="support_benefit" translatable="true">지원혜택</string>
    <string name="application_period" translatable="true">신청기간</string>
    <string name="telephone_inquiry" translatable="true">전화문의</string>
    <string name="bookmark" translatable="true">저장</string>
    <string name="support_content" translatable="true">지원내용</string>
    <string name="process" translatable="true">신청 과정</string>
    <string name="required_documents" translatable="true">필요서류</string>
    <string name="detail_information" translatable="true">상세정보</string>
    <string name="review" translatable="true">리뷰</string>
    <string name="process_detail1" translatable="true">신청 접수</string>
    <string name="process_detail2" translatable="true">서류 검토</string>
    <string name="process_detail3" translatable="true">발표 및 안내</string>
    <string name="wth_soar" translatable="true">SOAR와 함께 준비하기</string>
    <string name="detail_more">상세정보 더보기</string>
    <string name="fold">접기</string>
    <string name="comment">댓글</string>
    <string name="enter_comment">댓글을 입력해주세요</string>
    <string name="see_more">더보기</string>
    <string name="apply">신청하기</string>
    <string name="applied">신청 완료</string>
    <string name="my_activity">나의 활동</string>
    <string name="use_guide">이용 안내</string>
    <string name="soar_guide">SOAR 가이드</string>
    <string name="announcement">공지사항</string>
    <string name="customer_center">고객센터</string>
    <string name="app_inform">앱 정보</string>
    <string name="policy">약관 및 정책</string>
    <string name="app_version">버전 정보</string>
    <string name="version">v1.0</string>
    <string name="logout">로그아웃</string>
    <string name="profile">프로필</string>
    <string name="record">기록</string>
    <string name="birth">생일</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="unknown">미설정</string>
    <string name="profile_title">프로필 수정</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="change_curation_inform">큐레이션 정보 수정</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="find_id_title1">가입정보로</string>
    <string name="find_id_title2">아이디를 확인하세요</string>
    <string name="find_pw_title1">비밀번호 재설정을 위한</string>
    <string name="find_pw_title2">임시 비밀번호를 발급 받으세요</string>
    <string name="send_pw_email">비밀번호 재설정 메일 요청</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="new_pw2">새 비밀번호 확인</string>
    <string name="input_new_pw">새롭게 사용할 비밀번호를 입력해주세요</string>
    <string name="input_again">다시 한 번 입력해주세요</string>
    <string name="change">변경하기</string>
    <string name="fid_id_success">아이디 찾기 성공!</string>
    <string name="result1">님의 아이디는</string>
    <string name="result2">입니다</string>
    <string name="to_login2">로그인하러 가기</string>
    <string name="unsubscribe">회원 탈퇴</string>
    <string name="unsubscribe_title">정말 탈퇴하시겠어요?</string>
    <string name="unsubscribe_content">회원 탈퇴 시 계정 데이터 및 지출 기록이 영구적으로 삭제되며, 재가입 시 이전 데이터는 복구되지 않아요</string>
    <string name="no">아니요</string>
    <string name="yes">탈퇴할래요</string>
    <string name="unsubscribe_title2">본인 확인을 위해\n 비밀번호를 입력해주세요</string>
    <string name="unsubscribe_yes">탈퇴하기</string>
    <string name="unsubscribe_success">탈퇴가 완료되었습니다</string>
    <string name="to_start">처음으로</string>
    <string name="my_comment">댓글</string>
    <string name="soar_logo">SOAR 로고</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_skip">건너뛰기</string>
    <string name="onboarding_start">시작하기</string>
    <string name="ob_title1">내가 찾던 지원사업이 여기에!</string>
    <string name="ob_sub1">나의 정보를 입력하고\n맞춤 지원 사업을 추천받아보세요</string>
    <string name="ob_title2">한눈에 알아보는 자격 요건</string>
    <string name="ob_sub2">직관적인 신청 과정으로\n간편하게 신청해요</string>
    <string name="ob_title3">정보가 너무 많아 힘들다면?</string>
    <string name="ob_sub3">궁금한 부분은\nSOAR AI에게 바로 물어봐요</string>
    <string name="email_label">이메일 (아이디)</string>
    <string name="email_placeholder">이메일을 입력해주세요</string>
    <string name="password_label">비밀번호</string>
    <string name="password_placeholder">비밀번호를 입력해주세요</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="find_email_password">이메일·비밀번호 찾기</string>
    <string name="or">또는</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="close2">로그인에서 홈화면 가는 아이콘</string>
    <string name="login_title">SOAR 에\n오신 것을 환영해요!</string>
    <string name="error_email">이메일을 다시 확인해주세요</string>
    <string name="error_password">비밀번호를 다시 확인해주세요</string>
    <string name="back">뒤로가기</string>
    <string name="policy_title">서비스 이용약관에\n동의해주세요</string>
    <string name="policy_all_agree">약관 전체 동의</string>
    <string name="next">다음</string>
    <string name="basic_info_title">SOAR에서 사용하실\n회원 정보를 입력해주세요</string>
    <string name="hint_name">이름을 입력해주세요</string>
    <string name="email_info_title">SOAR에서 사용하실\n이메일을 입력해주세요</string>
    <string name="hint_email">이메일을 입력해주세요</string>
    <string name="error_email_form">이메일 형식을 다시 확인해주세요</string>
    <string name="error_request_email">인증번호를 다시 확인해주세요</string>
    <string name="msg_mail_sent">인증 메일이 발송되었어요</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="enter_code">인증번호 입력</string>
    <string name="enter_4number">4자리 숫자 입력</string>
    <string name="clock_max">3:00</string>
    <string name="error_pw_rule">비밀번호는 8~20자로 영문 소문자, 숫자를 조합해서 사용해주세요.</string>
    <string name="lblResident">주민등록번호 앞 7자리</string>
    <string name="hint_resident_birth">생년월일</string>
    <string name="pw">비밀번호</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
</resources>