<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/ref_white">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar"/>

    <FrameLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/ref_white"
        android:gravity="center">


        <LinearLayout
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/to_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/Font_Body_Bold"
                android:textColor="@color/ref_blue_500"
                android:text="@string/find_id"/>
            <TextView
                android:id="@+id/to_pw"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/Font_Body_Bold"
                android:text="@string/find_pw"
                android:textColor="@color/semantic_text_strong"/>
        </LinearLayout>


        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/ref_blue_500"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_findID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="28dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_id_title1"
                style="@style/Font_Heading300_Semibold"
                android:textColor="@color/ref_coolgray_800"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_id_title2"
                style="@style/Font_Heading300_Semibold"
                android:textColor="@color/ref_coolgray_800"
                android:layout_marginBottom="56dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="24dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/name"
                    style="@style/Font_Label_Medium"
                    android:textColor="@color/ref_coolgray_500"/>
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/round_background4"
                    android:hint="@string/hint_name"
                    style="@style/Font_Body_Regular"
                    android:textColor="@color/semantic_text_assistive"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/lblResident"
                    style="@style/Font_Label_Medium"
                    android:textColor="@color/ref_coolgray_500"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/birth"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:background="@drawable/round_background4"
                        android:hint="@string/hint_resident_birth"
                        style="@style/Font_Body_Regular"
                        android:textColor="@color/semantic_text_assistive"/>
                    
                    <View
                        android:layout_width="8dp"
                        android:layout_height="1dp"
                        android:background="@color/ref_gray_200"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="12dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/sex"
                            android:layout_width="32dp"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:background="@drawable/round_background4"
                            style="@style/Font_Body_Regular"
                            android:textColor="@color/semantic_text_assistive"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_find_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_id"
            style="@style/close_button"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_findPW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="28dp"
        android:paddingBottom="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_pw_title1"
                style="@style/Font_Heading300_Semibold"
                android:textColor="@color/ref_coolgray_800"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_pw_title2"
                style="@style/Font_Heading300_Semibold"
                android:textColor="@color/ref_coolgray_800"
                android:layout_marginBottom="56dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="24dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/name"
                    style="@style/Font_Label_Medium"
                    android:textColor="@color/ref_coolgray_500"/>
                <EditText
                    android:id="@+id/name_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/round_background4"
                    android:hint="@string/hint_name"
                    style="@style/Font_Body_Regular"
                    android:textColor="@color/semantic_text_assistive"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/email_label"
                    style="@style/Font_Label_Medium"
                    android:textColor="@color/ref_coolgray_500"/>
                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/round_background4"
                    android:hint="@string/email_placeholder"
                    style="@style/Font_Body_Regular"
                    android:textColor="@color/semantic_text_assistive"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_send_pw_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_pw_email"
            style="@style/close_button"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>