<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyPage.ChangePwActivity"
    android:background="@color/ref_white">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="76dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_title2"
            style="@style/Font_Heading300_Semibold"
            android:textColor="@color/ref_coolgray_800"
            android:layout_marginBottom="28dp"/>

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pw"
                style="@style/Font_Label_Medium"
                android:textColor="@color/ref_coolgray_500"/>
            <EditText
                android:id="@+id/pw1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/round_background4"
                android:hint="@string/input_pw"
                style="@style/Font_Body_Regular"
                android:textColor="@color/semantic_text_assistive"
                android:inputType="textPassword"/>

            <LinearLayout
                android:id="@+id/pw1_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:visibility="gone">
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_error"
                    android:layout_marginEnd="2dp"/>
                <TextView
                    android:id="@+id/pw1_error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_pw_rule"
                    style="@style/Font_Caption_Regular"
                    android:textColor="@color/semantic_information_error"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_unsubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_yes"
            style="@style/close_button"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>