<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPage.Unsubscribe.UnsubscribeActivity"
    android:orientation="vertical"
    android:background="@color/ref_opacityBlack_100"
    android:paddingHorizontal="30dp"
    android:gravity="center">
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background4"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_title"
            style="@style/Font_Heading500_Bold"
            android:textColor="@color/semantic_text_primary"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_content"
            style="@style/Font_Body_Regular"
            android:textColor="@color/semantic_text_primary"
            android:layout_marginBottom="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="14dp"
                android:paddingVertical="20dp"
                android:text="@string/no"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/ref_gray_100"
                android:textColor="@color/ref_gray_500"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="14dp"
                android:paddingVertical="20dp"
                android:text="@string/yes"
                style="@style/close_button"
                android:enabled="true"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>